src/objects/CLM_L2D_Trigger__c/CLM_L2D_Trigger__c.object-meta.xml
<CustomObject>
    <label>L2D Trigger</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>L2D Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L2D Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>