src/objects/CLM_L2D_Trigger__c/fields/CLM_Category__c.field-meta.xml
<CustomField>
    <fullName>CLM_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acceptance</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Care</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Customer Commitment</fullName>
            </value>
            <value>
                <fullName>Customer Data Security</fullName>
            </value>
            <value>
                <fullName>Customer Remote Access</fullName>
            </value>
            <value>
                <fullName>Customer Restrictions</fullName>
            </value>
            <value>
                <fullName>Customer Security Management</fullName>
            </value>
            <value>
                <fullName>Data Privacy</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Identity and Access Management</fullName>
            </value>
            <value>
                <fullName>Incident Response and Handling</fullName>
            </value>
            <value>
                <fullName>Information Security Control</fullName>
            </value>
            <value>
                <fullName>Interception</fullName>
            </value>
            <value>
                <fullName>IPR</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Manage Services</fullName>
            </value>
            <value>
                <fullName>Network Security</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Penalties</fullName>
            </value>
            <value>
                <fullName>Physical Security</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Security</fullName>
            </value>
            <value>
                <fullName>Risk and Title</fullName>
            </value>
            <value>
                <fullName>Sales Mode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>