src/objects/CLM_L2D_Trigger__c/fields/CLM_Parent_L2D_Trigger__c.field-meta.xml
<CustomField>
    <fullName>CLM_Parent_L2D_Trigger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent L2D Trigger</label>
    <referenceTo>CLM_L2D_Trigger__c</referenceTo>
    <relationshipLabel>L2D Triggers</relationshipLabel>
    <relationshipName>L2D_Triggers</relationshipName>
    <type>Lookup</type>
</CustomField>