src/objects/CLM_L2D_Trigger__c/fields/CLM_Trigger_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>CLM_Trigger_Long_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trigger Long Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>