src/objects/CLM_L2D_Trigger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLM_Trigger_Domain__c</columns>
    <columns>CLM_Trigger_Sub_Domain__c</columns>
    <columns>CLM_Trigger_Name__c</columns>
    <columns>CLM_Category__c</columns>
    <columns>CLM_Subcategory__c</columns>
    <columns>CLM_Status__c</columns>
    <columns>CLM_L2DTrigger__c</columns>
    <columns>CLM_Nokia_Default_Position__c</columns>
    <columns>CLM_Position_to_Avoid__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Triggers</label>
</ListView>